--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "slugify": "^1.6.6"
   }
 }
