--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.3",
-    "slugify": "^1.6.6"
+    "redis": "^4.6.14",
+    "slugify": "^1.6.6",
+    "util": "^0.12.5"
   }
 }
